--- a/apps/web/src/app/modules/auth/auth.component.html
+++ b/apps/web/src/app/modules/auth/auth.component.html
@@ -3,5 +3,8 @@
     <a tuiTab routerLink="login" routerLinkActive> login </a>
     <a tuiTab routerLink="register" routerLinkActive> Register </a>
   </tui-tabs>
-  <router-outlet></router-outlet>
+
+  <div style="padding-top: 16px">
+    <router-outlet></router-outlet>
+  </div>
 </div>
