--- a/apps/web/src/app/modules/users/users.component.html
+++ b/apps/web/src/app/modules/users/users.component.html
@@ -1,7 +1,7 @@
 <button tuiButton (click)="updateUsers()">Update users</button>
 
-<ul class="tui-list">
-  <li *ngFor="let user of users | async" class="tui-list__item">
+<ul *ngIf="users$ | async as users" class="tui-list">
+  <li *ngFor="let user of users" class="tui-list__item">
     {{ user.username }}
   </li>
 </ul>
