add user component

--- a/apps/web/src/app/modules/projects/projects.component.html
+++ b/apps/web/src/app/modules/projects/projects.component.html
@@ -1,33 +1,34 @@
-<div class="list">
-  <button tuiButton (click)="loadProjects()">Update projects</button>
+<button tuiButton (click)="update()">Update</button>
 
-  <div>
-    <app-project-form (create)="loadProjects()"></app-project-form>
-  </div>
+<div>
+  <app-project-form (create)="update()"></app-project-form>
+</div>
 
-  <h1 *ngIf="(projects$ | async)?.length === 0">Projects not found</h1>
+<ng-container *ngIf="projects$ | async as projects">
+  <ul *ngIf="projects.length > 0; else notFound" class="tui-list">
+    <li
+      *ngFor="let project of projects$ | async"
+      class="tui-list__item project"
+    >
+      <div class="project__header">
+        <h3 class="project__title">
+          {{ project.shortTitle }}
+        </h3>
 
-  <ul class="tui-list">
-    <li *ngFor="let project of projects$ | async" class="tui-list__item">
-      <h3
-        style="
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-        "
-      >
-        {{ project.shortTitle }}
         <button
           tuiButton
           size="s"
           appearance="secondary-destructive"
-          style="margin-left: 8px"
           (click)="onDelete(project.id)"
         >
           delete
         </button>
-      </h3>
-      <p>{{ project.fullTitle }}</p>
+      </div>
+      <p class="project__full-title">{{ project.fullTitle }}</p>
     </li>
   </ul>
-</div>
+
+  <ng-template #notFound>
+    <h1 *ngIf="(projects$ | async)?.length === 0">Projects not found</h1>
+  </ng-template>
+</ng-container>
