--- a/apps/web/src/app/modules/projects/projects.component.scss
+++ b/apps/web/src/app/modules/projects/projects.component.scss
@@ -1,3 +1,10 @@
-.list > * {
-  margin-bottom: 16px;
+:host > * {
+  margin-bottom: 1rem;
+}
+
+.project {
+  &__header {
+    display: flex;
+    justify-content: space-between;
+  }
 }
