--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -4,7 +4,7 @@
       *ngFor="let route of routes"
       tuiButton
       [routerLink]="route.path"
-      (click)="route?.handler()"
+      (click)="route?.handler && route?.handler()"
     >
       {{ route.title }}
     </button>
