--- a/apps/web/src/app/modules/applications/applications.component.html
+++ b/apps/web/src/app/modules/applications/applications.component.html
@@ -1,9 +1,13 @@
-<button tuiButton (click)="updateApplications()">Update applications</button>
+<button tuiButton (click)="update()">Update</button>
 
-<ul class="tui-list">
-  <li *ngFor="let application of applications$ | async">
-    {{ application.id }}
-  </li>
-</ul>
+<ng-container *ngIf="applications$ | async as applications">
+  <ul *ngIf="applications.length > 0; else notFound" class="tui-list">
+    <li *ngFor="let application of applications">
+      {{ application.id }}
+    </li>
+  </ul>
 
-<h1 *ngIf="(applications$ | async)?.length === 0">Applications not found</h1>
+  <ng-template #notFound>
+    <h1>No applications created</h1>
+  </ng-template>
+</ng-container>
