update register component

--- a/apps/web/src/app/modules/auth/register/register.component.html
+++ b/apps/web/src/app/modules/auth/register/register.component.html
@@ -2,6 +2,8 @@
   <tui-input formControlName="username">Username</tui-input>
   <tui-input-password formControlName="password">Password</tui-input-password>
   <tui-input formControlName="email">Email</tui-input>
+  <tui-input formControlName="firstName">First name</tui-input>
+  <tui-input formControlName="lastName">Last name</tui-input>
 
   <button tuiButton type="submit">Register</button>
 </form>
